@@ -7,10 +7,14 @@ unity (7.4.0+16.04.20160801.2-0ubuntu2) UNRELEASED; urgency=medium
   [ Andrea Azzarone ]
   * When locked discard damages from windows below lockscreen. (LP:
     #1605180)
+  * DecoratedWindow: display unmaximize button if the window is
+    vertically or horizontally maximized (LP: #1608480)
 
   [ Marco Trevisan (Treviño) ]
   * DecoratedWindow: avoid deferencing an invalid shadow texture ptr,
     and split functions (LP: #1608464)
+  * DecoratedWindow: display unmaximize button if the window is
+    vertically or horizontally maximized (LP: #1608480)
 
  -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 23 Aug 2016 17:00:35 +0200
 
